[gd_scene load_steps=3 format=3 uid="uid://dhrqfjuc8wi8a"]

[ext_resource type="Script" path="res://scenes/settings/UISettingSlider.gd" id="1_ebd5d"]
[ext_resource type="Theme" uid="uid://bpgjohkfj7o1s" path="res://scenes/settings/default_settings_theme.tres" id="2_v2n6f"]

[node name="UISettingCheckbox" type="HBoxContainer"]
offset_right = 29.0
offset_bottom = 24.0
size_flags_horizontal = 3
script = ExtResource("1_ebd5d")

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_v2n6f")
text = "Label text"

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("2_v2n6f")

[node name="ShowValue" type="Label" parent="."]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="value_changed" from="HSlider" to="." method="_on_value_changed"]
